@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.34
+ * @version 0.13.35
  */
 
 /* Breaks */
@@ -12,8 +12,8 @@
 @bg-light: linen;
 @bg-base: bisque; /* #ffe4c4 hsl(33, 100%, 88%) */
 @bg-dark: khaki;
-@bg-darker:sienna;
-@bg-darkest: black;
+@bg-darker: sandybrown;
+@bg-darkest: sienna;
 
 @text-close: firebrick;
 @text-dark: black;
@@ -57,7 +57,7 @@
 @checkbox-width: 40px;
 @checkbox-width-knob: 20px;
 @dialog-title-min-width: 6rem;
-@display-text-min-width: 10rem;
+@display-text-min-width: 12rem;
 @display-text-max-width: 24rem;
 @ds-form-max-height-vertical: 60vh;
 @ds-form-max-width-horizontal: 21rem;
